<resources>
    <string name="app_name">MyContactApp</string>
    <string name="contacts">Contacts</string>
    <string name="phone_number">Phone</string>
    <string name="mobile_number">Mobile</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">save</string>
    <string name="create">Create new contact</string>
    <string name="detailimage">detailImage</string>
    <string name="first_implementation_activity">First Implementation Activity</string>
    <string name="second_implementation_activity">Second Implementation Activity</string>
    <string name="anthony_idoko_decagon_dev">anthony.idoko@decagon.dev</string>
    <string name="read_contact">Read Contact</string>
    <string name="you_need_to_grant_permission_to_be_able_to_use_this_app">You need to grant permission to be able to use this app</string>
</resources>