<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/abbreviation_view"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:src="@color/purple_200"
        android:transitionName="contactImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/abbreviated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/abbreviation_view"
        app:layout_constraintEnd_toEndOf="@+id/abbreviation_view"
        app:layout_constraintStart_toStartOf="@+id/abbreviation_view"
        app:layout_constraintTop_toTopOf="@+id/abbreviation_view" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:text="@string/first_name"
        android:transitionName="firstName"
        app:layout_constraintStart_toEndOf="@+id/abbreviation_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="4dp"
        android:text="@string/last_name"
        android:transitionName="lastName"
        app:layout_constraintStart_toEndOf="@+id/firstName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:textSize="20dp"
        android:visibility="gone"
        android:transitionName="phoneNumber"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:visibility="gone"
        android:transitionName="email"
        android:text="@string/anthony_idoko_decagon_dev"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>